# GW2-API-rust-wrapper

./: Cargo.toml  boilerplates.org
src/: api.rs  build.rs  errors.rs  lib.rs  util.rs
src/account/: achievements.rs  bank.rs  dailycrafting.rs  dungeons.rs  dyes.rs  finishers.rs  gliders.rs  inventory.rs  legendaryarmory.rs  luck.rs  mailcarriers.rs  mapchests.rs  masteries.rs  materials.rs  minis.rs  mod.rs  novelties.rs  outfits.rs  raids.rs  recipes.rs  skins.rs  titles.rs  wallet.rs  worldbosses.rs
src/account/home/: cats.rs  mod.rs  nodes.rs
src/account/mastery/: mod.rs  points.rs
src/account/mounts/: mod.rs  skins.rs  types.rs
src/account/pvp/: heroes.rs  mod.rs
src/achievements/: categories.rs  groups.rs  mod.rs
src/achievements/daily/: mod.rs  tomorrow.rs
src/backstory/: answers.rs  mod.rs  questions.rs
src/commerce/: delivery.rs  listings.rs  mod.rs  prices.rs  transcations.rs
src/commerce/exchange/: coins.rs  gems.rs  mod.rs
src/guild/: mod.rs  permissions.rs  search.rs  upgrades.rs
src/guild/gid/: log.rs  members.rs  mod.rs  ranks.rs  stash.rs  storage.rs  teams.rs  treasury.rs  upgrades.rs
src/guild/withid/: mod.rs
src/home/: cats.rs  mod.rs  nodes.rs
src/mounts/: mod.rs  skins.rs  types.rs
src/pvp/: amulets.rs  mod.rs  ranks.rs
src/pvp/seasons/: leaderboards.rs  mod.rs
